[gd_scene load_steps=10 format=3 uid="uid://cqa5syijramtk"]

[ext_resource type="Script" path="res://lessons/digitalMeter/digital_meter_lesson.gd" id="1_vhxrh"]
[ext_resource type="Texture2D" uid="uid://vapunxkmmwwy" path="res://scenes/MeterLEDs/greenLED.png" id="2_xhwex"]
[ext_resource type="Texture2D" uid="uid://0dgf3cefecwr" path="res://scenes/PointSource/sourceCircle.png" id="3_jf6dw"]
[ext_resource type="Texture2D" uid="uid://dtxyg0dsi5bmm" path="res://scenes/DetectorMeterAnalog/indicatorLight_256px_OFF.png" id="4_5sjf7"]
[ext_resource type="Texture2D" uid="uid://dl8l822f7uerm" path="res://scenes/MeterLEDs/goalOff.png" id="5_2esat"]
[ext_resource type="PackedScene" uid="uid://chlytrwdjaffi" path="res://scenes/MeterLEDs/meter_leds.tscn" id="6_wfg1c"]
[ext_resource type="Texture2D" uid="uid://beqikbwr1x3yq" path="res://scenes/MeterLEDs/redLED.png" id="7_2cm6w"]
[ext_resource type="Texture2D" uid="uid://dle8bqng3uccv" path="res://scenes/MeterLEDs/avgMarker.png" id="8_1pptw"]
[ext_resource type="Texture2D" uid="uid://dqgjefhfh8dch" path="res://scenes/MeterLEDs/yellowLED.png" id="9_omgtv"]

[node name="DigitalMeterLesson" type="Node2D"]
script = ExtResource("1_vhxrh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 266)
zoom = Vector2(2, 2)

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 672.0
offset_top = 494.0
offset_right = 1024.0
offset_bottom = 534.0
theme_override_font_sizes/normal_font_size = 24
text = "Any key to continue . . ."

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 606.0
offset_top = 274.0
offset_right = 958.0
offset_bottom = 314.0
theme_override_font_sizes/normal_font_size = 23
text = "Detected Power"

[node name="InstantLegend" type="Sprite2D" parent="."]
position = Vector2(542, 288)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_xhwex")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
position = Vector2(544, 320)
scale = Vector2(2, 2)
texture = ExtResource("3_jf6dw")

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D"]
visible = false
offset_left = 32.0
offset_top = -8.5
offset_right = 160.0
offset_bottom = 31.5
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/normal_font_size = 23
text = "ID Color"

[node name="GoalMetLegend" type="Sprite2D" parent="."]
visible = false
position = Vector2(544, 384)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_5sjf7")

[node name="RichTextLabel" type="RichTextLabel" parent="GoalMetLegend"]
visible = false
offset_left = 42.6667
offset_top = -12.0
offset_right = 295.667
offset_bottom = 28.0
scale = Vector2(0.67, 0.67)
theme_override_font_sizes/normal_font_size = 23
text = "Goal Met Indicator"

[node name="WireLegend" type="Line2D" parent="."]
visible = false
position = Vector2(1, 18)
points = PackedVector2Array(512, 416, 576, 416, 576, 448, 544, 448)

[node name="RichTextLabel" type="RichTextLabel" parent="WireLegend"]
offset_left = 607.0
offset_top = 412.0
offset_right = 734.0
offset_bottom = 452.0
theme_override_font_sizes/normal_font_size = 23
text = "Wire"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
offset_left = 606.0
offset_top = 364.0
offset_right = 830.0
offset_bottom = 404.0
theme_override_font_sizes/normal_font_size = 23
text = "Goal Power"

[node name="goalLightLegend" type="Sprite2D" parent="."]
visible = false
position = Vector2(542, 376)
scale = Vector2(1.25, 1.25)
texture = ExtResource("5_2esat")

[node name="MeterLEDs" parent="." instance=ExtResource("6_wfg1c")]
position = Vector2(224, 256)
scale = Vector2(0.25, 0.25)
maxEnergy = 10.0
goalEnergy = 6.0
goalOnTop = true
updateTime = 0.5

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 606.0
offset_top = 201.0
offset_right = 958.0
offset_bottom = 241.0
theme_override_font_sizes/normal_font_size = 23
text = "Blocked Power"

[node name="InstantLegend2" type="Sprite2D" parent="."]
position = Vector2(542, 215)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_2cm6w")

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
offset_left = 608.0
offset_top = 124.0
offset_right = 960.0
offset_bottom = 164.0
theme_override_font_sizes/normal_font_size = 23
text = "Ray Aligned"

[node name="InstantLegend3" type="Sprite2D" parent="."]
visible = false
position = Vector2(542, 296)
scale = Vector2(1.25, 1.25)
texture = ExtResource("8_1pptw")

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
offset_left = 16.0
offset_top = 29.0
offset_right = 448.0
offset_bottom = 98.0
theme_override_font_sizes/normal_font_size = 40
text = "Power Meter"

[node name="InstantLegend4" type="Sprite2D" parent="."]
position = Vector2(542, 142)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_omgtv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
